--- a/config/locales/models/radio.ja.yml
+++ b/config/locales/models/radio.ja.yml
@@ -7,5 +7,8 @@ ja:
         title: タイトル
         description: 説明
         mp3: 音声ファイル
+        duration: 秒数
+        size: mp3のbyte数
         youtube_url: Youtube
         podcast_url: podcast
+        is_published: 公開日
