unpermittedなpublished_atは分かりにくかったのでreserve_timeに変更した

--- a/config/locales/models/radio.ja.yml
+++ b/config/locales/models/radio.ja.yml
@@ -15,4 +15,6 @@ ja:
         youtube_url: Youtube
         podcast_url: podcast
         published_at: 投稿日時
+
         status: 公開ステータス
+        reserve_time: 公開予定日時
