--- a/config/locales/models/radio.ja.yml
+++ b/config/locales/models/radio.ja.yml
@@ -16,5 +16,5 @@ ja:
         podcast_url: podcast
         published_at: 投稿日時
 
-        status: 公開ステータス
+        status: ステータス
         reserve_time: 公開予定日時
