--- a/config/locales/models/radio.ja.yml
+++ b/config/locales/models/radio.ja.yml
@@ -9,7 +9,8 @@ ja:
         description: 説明
         personalities: パーソナリティー
         communities: 紹介したコミュニティ
-        mp3: 音声ファイル
+        mp3: 本編
+        digest_mp3: ダイジェスト版
         duration: 秒数
         size: mp3のbyte数
         youtube_url: Youtube
