[add] バリデーション以外実装

--- a/config/locales/enums/contact_departments.ja.yml
+++ b/config/locales/enums/contact_departments.ja.yml
@@ -2,10 +2,10 @@
 
 ja:
   contact_departments:
-    M: 機械工学科
-    E: 電気情報工学科
-    C: 環境都市工学科
-    A: 建築学科
+    m: 機械工学科
+    e: 電気情報工学科
+    c: 環境都市工学科
+    a: 建築学科
     advanced: 専攻科
     graduate: OBOG
     parent: 保護者
