[fix] guraduateを卒業生に

--- a/config/locales/enums/contact_departments.ja.yml
+++ b/config/locales/enums/contact_departments.ja.yml
@@ -7,7 +7,7 @@ ja:
     c: 環境都市工学科
     a: 建築学科
     advanced: 専攻科
-    graduate: OBOG
+    graduate: 卒業生
     parent: 保護者
     teacher: 教員
     other: その他
