[fix] 本科の表記を削除

--- a/config/locales/enums/contact_grades.ja.yml
+++ b/config/locales/enums/contact_grades.ja.yml
@@ -2,11 +2,11 @@
 
 ja:
   contact_grades:
-    first_grade: 本科1年
-    second_grade: 本科2年
-    third_grade: 本科3年
-    fourth_grade: 本科4年
-    fifth_grade: 本科5年
+    first_grade: 1年
+    second_grade: 2年
+    third_grade: 3年
+    fourth_grade: 4年
+    fifth_grade: 5年
     junior: 専攻科1年
     senior: 専攻科2年
     obog: OBOG
