--- a/config/locales/models/article.ja.yml
+++ b/config/locales/models/article.ja.yml
@@ -5,8 +5,10 @@ ja:
     attributes:
       article:
         title: タイトル
+        image: 画像
         content: 内容
         autosave_content: 自動保存された内容
         writer: 執筆者
         published_at: 公開日
+        tag_list: タグ
         status: ステータス
