--- a/config/locales/models/personality.ja.yml
+++ b/config/locales/models/personality.ja.yml
@@ -14,5 +14,5 @@ ja:
         radios: 収録した回
         tag_list: タグ
         twitter_id: Twitter ID
-        facebook_id: facebook ID
+        facebook_id: Facebook ID
         instagram_id: Instagram ID
